--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.11.2", features = ["dynamic_linking"]}
+bevy = { version = "0.11.2", features = ["dynamic_linking"] }
+bevy_rapier3d = { version = "0.22.0", features = [
+    "simd-stable",
+    "debug-render-3d",
+] }
