--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,12 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.11.2", features = ["dynamic_linking"] }
+ahash = "0.8.3"
+bevy = { version = "0.11.2", features = [] }
 bevy_rapier3d = { version = "0.22.0", features = [
     "simd-stable",
     "debug-render-3d",
 ] }
+glam = { version = "0.24.1", features = ["debug-glam-assert"] }
+indexmap = "2.0.0"
+orbital = { git = "https://github.com/oli-obk/solar_sailors.git", rev = "2fabdd044f0f362595494dcad5102c50ae9572f7" }
